--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,29 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="bunny.yunny.com.rice_timer" >
-<!--
-Add permission
--->
-    <uses-permission android:name="com.android.alarm.permission.SET_ALARM"/>
+    package="bunny.yunny.com.rice_timer">
+
+    <!-- Add permission -->
+    <uses-permission android:name="com.android.alarm.permission.SET_ALARM" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
-            android:name=".AddRiceTimer"
-            android:label="@string/app_name" >
+            android:name="com.jlokimlin.rice_timer.rice_timer.AddRiceTimer"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <receiver
+            android:name="com.jlokimlin.rice_timer.rice_timer.MyWidgetProvider"
             android:icon="@drawable/ic_launcher"
-            android:label="Example Widget"
-            android:name="MyWidgetProvider" >
-            <intent-filter >
+            android:label="Example Widget">
+            <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
             </intent-filter>
 
@@ -31,6 +32,10 @@ Add permission
                 android:name="android.appwidget.provider"
                 android:resource="@xml/widget_info" />
         </receiver>
+
+        <activity
+            android:name="com.jlokimlin.rice_timer.rice_timer.HelloWorldActivity"
+            android:label="@string/title_activity_hello_world"></activity>
     </application>
 
 </manifest>
