--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="bunny.yunny.com.rice_timer">
+    package="com.jlokimlin.rice_timer">
 
     <!-- Add permission -->
     <uses-permission android:name="com.android.alarm.permission.SET_ALARM" />
