--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
+        android:icon="@drawable/ic_noun_33800_cc"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity
@@ -20,22 +20,6 @@
             </intent-filter>
         </activity>
 
-        <receiver
-            android:name="com.jlokimlin.rice_timer.rice_timer.MyWidgetProvider"
-            android:icon="@drawable/ic_launcher"
-            android:label="Example Widget">
-            <intent-filter>
-                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
-            </intent-filter>
-
-            <meta-data
-                android:name="android.appwidget.provider"
-                android:resource="@xml/widget_info" />
-        </receiver>
-
-        <activity
-            android:name="com.jlokimlin.rice_timer.rice_timer.HelloWorldActivity"
-            android:label="@string/title_activity_hello_world"></activity>
     </application>
 
 </manifest>
